# pntr_physfs

./: CMakeLists.txt  README.md  pntr-physfs.h  pntr_physfs.h
cmake/: Findpntr.cmake
examples/: CMakeLists.txt  pntr_physfs_examples.c
test/: CMakeLists.txt  pntr-physfs-test.c  pntr_physfs_test.c
test/.cmake/: FindPhysFS.cmake
